shack effect added

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <div :style="monsterBarStyle" class="healthbar_value"></div>
         </div>
       </section>
-      <section id="player" class="container">
+      <section id="hero" class="container ">
         <h2>Hero Health</h2>
         <div class="healthbar">
           <div :style="heroBarStyle" class="healthbar_value"></div>
